// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductGridPrice /> should render with msrp 1`] = `
<Component
  price={
    Object {
      "currency": "EUR",
      "discount": 52,
      "info": "PriceInfoString",
      "msrp": 22.95,
      "unitPrice": 10.95,
      "unitPriceMin": 10.95,
      "unitPriceStriked": 0,
    }
  }
>
  <ProductGridPrice
    price={
      Object {
        "currency": "EUR",
        "discount": 52,
        "info": "PriceInfoString",
        "msrp": 22.95,
        "unitPrice": 10.95,
        "unitPriceMin": 10.95,
        "unitPriceStriked": 0,
      }
    }
  >
    <Grid
      className="css-1glzrmu"
      component="ul"
      wrap={true}
    >
      <ul
        className="css-1glzrmu css-h7r55a css-u7q1iu"
      >
        <GridItem
          className=""
          component="li"
          grow={1}
          shrink={1}
        >
          <li
            className=" css-1gs0ko2"
          >
            <Price
              className=""
              currency="EUR"
              discounted={true}
              fractions={true}
              taxDisclaimer={false}
              unitPrice={10.95}
              unitPriceMin={10.95}
            >
              <div
                className="css-izofhs  css-1ncyhu"
                data-test-id="minPrice: 10.95 price: 10.95 currency: EUR"
              >
                <span
                  aria-label="price.label"
                  role="text"
                >
                  <Translate
                    className=""
                    params={Object {}}
                    role={null}
                    string="price.from"
                    transform={null}
                  >
                    <span
                      className=""
                      role={null}
                    >
                      price.from
                      <FormatPrice
                        className=""
                        currency="EUR"
                        forKey="price"
                        fractions={true}
                        key=".0"
                        price={10.95}
                      >
                        <span
                          className=""
                        >
                          10.95
                        </span>
                      </FormatPrice>
                    </span>
                  </Translate>
                </span>
              </div>
            </Price>
          </li>
        </GridItem>
        <GridItem
          className=""
          component="li"
          grow={0}
          shrink={1}
        >
          <li
            className=""
          >
            <PriceStriked
              className="css-nil"
              currency="EUR"
              value={22.95}
            >
              <div
                className="css-1sagvrb css-nil "
                role="text"
              >
                <span
                  aria-label="price.label_old_price"
                  data-test-id="strikedPrice: 22.95"
                >
                  <FormatPrice
                    className=""
                    currency="EUR"
                    fractions={true}
                    price={22.95}
                  >
                    <span
                      className=""
                    >
                      22.95
                    </span>
                  </FormatPrice>
                </span>
              </div>
            </PriceStriked>
          </li>
        </GridItem>
      </ul>
    </Grid>
    <Grid
      className=""
      component="ul"
      wrap={false}
    >
      <ul
        className=" css-h7r55a"
      >
        <GridItem
          className=""
          component="li"
          grow={0}
          shrink={1}
        >
          <li
            className=""
          >
            <PriceInfo
              className="css-1gftye4"
              text="PriceInfoString"
            >
              <div
                className="css-1kqiarg css-1gftye4"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "PriceInfoString",
                  }
                }
                data-test-id="priceInfo: PriceInfoString"
              />
            </PriceInfo>
          </li>
        </GridItem>
      </ul>
    </Grid>
  </ProductGridPrice>
</Component>
`;

exports[`<ProductGridPrice /> should render with strike price 1`] = `
<Component
  price={
    Object {
      "currency": "EUR",
      "discount": 52,
      "info": "",
      "msrp": 0,
      "unitPrice": 10.95,
      "unitPriceMin": 10.95,
      "unitPriceStriked": 22.95,
    }
  }
>
  <ProductGridPrice
    price={
      Object {
        "currency": "EUR",
        "discount": 52,
        "info": "",
        "msrp": 0,
        "unitPrice": 10.95,
        "unitPriceMin": 10.95,
        "unitPriceStriked": 22.95,
      }
    }
  >
    <Grid
      className="css-1glzrmu"
      component="ul"
      wrap={true}
    >
      <ul
        className="css-1glzrmu css-h7r55a css-u7q1iu"
      >
        <GridItem
          className=""
          component="li"
          grow={1}
          shrink={1}
        >
          <li
            className=" css-1gs0ko2"
          >
            <Price
              className=""
              currency="EUR"
              discounted={true}
              fractions={true}
              taxDisclaimer={false}
              unitPrice={10.95}
              unitPriceMin={10.95}
            >
              <div
                className="css-izofhs  css-1ncyhu"
                data-test-id="minPrice: 10.95 price: 10.95 currency: EUR"
              >
                <span
                  aria-label="price.label"
                  role="text"
                >
                  <Translate
                    className=""
                    params={Object {}}
                    role={null}
                    string="price.from"
                    transform={null}
                  >
                    <span
                      className=""
                      role={null}
                    >
                      price.from
                      <FormatPrice
                        className=""
                        currency="EUR"
                        forKey="price"
                        fractions={true}
                        key=".0"
                        price={10.95}
                      >
                        <span
                          className=""
                        >
                          10.95
                        </span>
                      </FormatPrice>
                    </span>
                  </Translate>
                </span>
              </div>
            </Price>
          </li>
        </GridItem>
        <GridItem
          className=""
          component="li"
          grow={0}
          shrink={1}
        >
          <li
            className=""
          >
            <PriceStriked
              className="css-nil"
              currency="EUR"
              value={22.95}
            >
              <div
                className="css-1sagvrb css-nil "
                role="text"
              >
                <span
                  aria-label="price.label_old_price"
                  data-test-id="strikedPrice: 22.95"
                >
                  <FormatPrice
                    className=""
                    currency="EUR"
                    fractions={true}
                    price={22.95}
                  >
                    <span
                      className=""
                    >
                      22.95
                    </span>
                  </FormatPrice>
                </span>
              </div>
            </PriceStriked>
          </li>
        </GridItem>
      </ul>
    </Grid>
  </ProductGridPrice>
</Component>
`;

exports[`<ProductGridPrice /> should render without discounts 1`] = `
<Component
  price={
    Object {
      "currency": "EUR",
      "discount": 0,
      "info": "PriceInfoString",
      "msrp": 0,
      "unitPrice": 22.95,
      "unitPriceMin": 22.95,
      "unitPriceStriked": 0,
    }
  }
>
  <ProductGridPrice
    price={
      Object {
        "currency": "EUR",
        "discount": 0,
        "info": "PriceInfoString",
        "msrp": 0,
        "unitPrice": 22.95,
        "unitPriceMin": 22.95,
        "unitPriceStriked": 0,
      }
    }
  >
    <Grid
      className="css-1glzrmu"
      component="ul"
      wrap={true}
    >
      <ul
        className="css-1glzrmu css-h7r55a css-u7q1iu"
      >
        <GridItem
          className=""
          component="li"
          grow={1}
          shrink={1}
        >
          <li
            className=" css-1gs0ko2"
          >
            <Price
              className=""
              currency="EUR"
              discounted={false}
              fractions={true}
              taxDisclaimer={false}
              unitPrice={22.95}
              unitPriceMin={22.95}
            >
              <div
                className="css-izofhs "
                data-test-id="minPrice: 22.95 price: 22.95 currency: EUR"
              >
                <span
                  aria-label="price.label"
                  role="text"
                >
                  <Translate
                    className=""
                    params={Object {}}
                    role={null}
                    string="price.from"
                    transform={null}
                  >
                    <span
                      className=""
                      role={null}
                    >
                      price.from
                      <FormatPrice
                        className=""
                        currency="EUR"
                        forKey="price"
                        fractions={true}
                        key=".0"
                        price={22.95}
                      >
                        <span
                          className=""
                        >
                          22.95
                        </span>
                      </FormatPrice>
                    </span>
                  </Translate>
                </span>
              </div>
            </Price>
          </li>
        </GridItem>
      </ul>
    </Grid>
    <Grid
      className=""
      component="ul"
      wrap={false}
    >
      <ul
        className=" css-h7r55a"
      >
        <GridItem
          className=""
          component="li"
          grow={0}
          shrink={1}
        >
          <li
            className=""
          >
            <PriceInfo
              className="css-1gftye4"
              text="PriceInfoString"
            >
              <div
                className="css-1kqiarg css-1gftye4"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "PriceInfoString",
                  }
                }
                data-test-id="priceInfo: PriceInfoString"
              />
            </PriceInfo>
          </li>
        </GridItem>
      </ul>
    </Grid>
  </ProductGridPrice>
</Component>
`;
